[gd_scene load_steps=8 format=3 uid="uid://b1cqdgafqudth"]

[ext_resource type="Script" path="res://scripts/rat_scene.gd" id="1_bnijq"]

[sub_resource type="Animation" id="Animation_a5crr"]
resource_name = "breath"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.52, 0.48), Vector2(0.5, 0.5), Vector2(0.48, 0.52), Vector2(0.5, 0.5), Vector2(0.52, 0.48)]
}

[sub_resource type="Animation" id="Animation_qr63u"]
resource_name = "bush"

[sub_resource type="Animation" id="Animation_mcgcc"]
resource_name = "tramp"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5, 3, 4.5, 6),
"transitions": PackedFloat32Array(0.116629, 0.31864, 3.4822, 1),
"update": 0,
"values": [Vector2(168, 712), Vector2(168, 722), Vector2(168, 504), Vector2(168, 712)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.7, 3.2, 5.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [0],
"method": &"tramp_emit"
}, {
"args": [1],
"method": &"tramp_emit"
}, {
"args": [2],
"method": &"tramp_emit"
}, {
"args": [3],
"method": &"tramp_emit"
}]
}

[sub_resource type="Animation" id="Animation_qcbup"]
resource_name = "wheel"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_81vt2"]
_data = {
"breath": SubResource("Animation_a5crr"),
"bush": SubResource("Animation_qr63u"),
"tramp": SubResource("Animation_mcgcc"),
"wheel": SubResource("Animation_qcbup")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_eonfk"]
radius = 20.188

[node name="Rat_body" type="CharacterBody2D"]
position = Vector2(168, 712)
scale = Vector2(0.52, 0.48)
collision_layer = 2
input_pickable = true
script = ExtResource("1_bnijq")

[node name="Goto" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="body" type="Sprite2D" parent="."]

[node name="ears_f" type="Sprite2D" parent="."]
position = Vector2(1, 1)

[node name="ears_s" type="Sprite2D" parent="."]
position = Vector2(1, 1)

[node name="eyes" type="Sprite2D" parent="."]

[node name="legs_f" type="Sprite2D" parent="."]

[node name="legs_s" type="Sprite2D" parent="."]

[node name="nose_f" type="Sprite2D" parent="."]

[node name="nose_s" type="Sprite2D" parent="."]

[node name="tail_s" type="Sprite2D" parent="."]

[node name="tail_f" type="Sprite2D" parent="."]

[node name="spots" type="Sprite2D" parent="."]

[node name="Rat_anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
autoplay = "breath"
libraries = {
"": SubResource("AnimationLibrary_81vt2")
}

[node name="Breedable" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3600.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(3.64876, 3.22593)
shape = SubResource("CircleShape2D_eonfk")
debug_color = Color(0.886275, 0.262745, 0.521569, 0.419608)

[connection signal="input_event" from="." to="." method="_on_character_body_2d_input_event"]
[connection signal="timeout" from="Goto" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Rat_anim" to="." method="_on_rat_anim_animation_finished"]
[connection signal="timeout" from="Breedable" to="." method="_on_breedable_timeout"]
